# azure-test

./: .env.example  .gitignore  PROJECT.md  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: config.py  dependencies.py  main.py
app/api/: routes.py
app/services/: langchain_service.py
tests/: test_chat.py  test_health.py  test_langchain_service.py  test_requirements_export.py
