[project]
name = "azure-test"
version = "0.1.0"
description = "Production-style FastAPI app with a LangChain service stub and CI/CD"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langchain>=0.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.uv]
# The app is run in place (uv run uvicorn app.main:app), not distributed as a
# package, so uv only needs to resolve dependencies — not build this project.
package = false

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "ASYNC", # flake8-async
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
